Update on Overleaf.

--- a/header.tex
+++ b/header.tex
@@ -117,8 +117,8 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \soulregister\citep7
 \soulregister\ref7
 
-\usepackage[final]{changes}
-%\usepackage{changes}
+%\usepackage[final]{changes}
+\usepackage{changes}
 
 
 \setaddedmarkup{\textcolor{black}{\hl{#1}}}
