--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -258,13 +258,13 @@ Concerning the comments made by the fourth referee:
 	% figure 1: modify font size so that labels do not go to the edge of their respective objects
 	% figure 2: can you add the parameters that led to each of the grids
 	% figure 3: check spelling of "Augburg" (should be Augsburg)
-	%line 350: "...consists of..."
-	% line 455: "sa,e" = "same"?
+	% line 350: "...consists of..."
+	% X line 455: "sa,e" = "same"? OK
 	%figure 4 and figure 5 captions: make it explicit that we're seeing the Sugarscape results here.
 	%line 515: "analyse" = "analysis"
 	%line 593: "at reach" = "within reach"
 	%line 671: would "classic" or "hypothetical" be better words (choice dependent on your meaning) than "mythical", which implies these are models of centuries ago and somehow out of reach..
-	\item
+	\item Spelling errors and approximations in the vocabulary chosen were corrected.
 \end{itemize}
 
 
