Update on Overleaf.

--- a/header.tex
+++ b/header.tex
@@ -124,8 +124,9 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \setaddedmarkup{\textcolor{black}{\hl{#1}}}
 \setdeletedmarkup{\textcolor{red}{\sout{#1}}}
 
-
-
+% add line number
+\usepackage{lineno}
+\linenumbers
 
 
 
