--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,3 +1,26 @@
+@article{kruskal1983overview,
+  title={An overview of sequence comparison: Time warps, string edits, and macromolecules},
+  author={Kruskal, Joseph B},
+  journal={SIAM review},
+  volume={25},
+  number={2},
+  pages={201--237},
+  year={1983},
+  publisher={SIAM}
+}
+
+@article{kuhnert2005comparing,
+  title={Comparing raster map comparison algorithms for spatial modeling and analysis},
+  author={Kuhnert, Matthias and Voinov, Alexey and Seppelt, Ralf},
+  journal={Photogrammetric Engineering \& Remote Sensing},
+  volume={71},
+  number={8},
+  pages={975--984},
+  year={2005},
+  publisher={American Society for Photogrammetry and Remote Sensing}
+}
+
+
 @article{o2015physicists,
 	Author = {O'Sullivan, David and Manson, Steven M},
 	Journal = {Annals of the Association of American Geographers},
