--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -254,10 +254,13 @@ Concerning the comments made by the fourth referee:
 	\item 
 	
 	% Small edits:
-	% line 68: "...a different system"
+	% X line 68: "...a different system"
 	% figure 1: modify font size so that labels do not go to the edge of their respective objects
+	% TODO Clem
 	% figure 2: can you add the parameters that led to each of the grids
+	% TODO Juste
 	% figure 3: check spelling of "Augburg" (should be Augsburg)
+	% TODO Clem
 	% line 350: "...consists of..."
 	% X line 455: "sa,e" = "same"? OK
 	%figure 4 and figure 5 captions: make it explicit that we're seeing the Sugarscape results here.
