Update on Overleaf.

--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -183,7 +183,7 @@ Concerning the comments made by the second referee:
 	\item
 	
 	% Last paragraph of page 5, you do not state explicitly if genetic algorithms were use within the OpenMOLE platform.
-	\item 
+	\item The functionalities of OpenMOLE we used were detailed.
 	
 	% In section 3.1, page 8, line 404-405 the authors mention that the distance of the phase diagrams was measured with respect to the reference phase diagram computed on the default initial spatial conditions. Actually this came as a surprise to me. I had the impression that all phase diagrams would be evaluated against all other diagrams. Perhaps this should be explained earlier in the paper.
 	\item 
@@ -248,7 +248,7 @@ Concerning the comments made by the fourth referee:
 	\item 
 	
 	% Why do you not have the same amount of repetitions for your Sugarscape (50 repetitions) and Schelling (100 repetitions) model runs?
-	\item 
+	\item \comment[JR]{no justification $\rightarrow$ new runs ?}
 	
 	% You say your models are open source - do you give details of that source?  
 	\item 
