--- a/paper.tex
+++ b/paper.tex
@@ -127,7 +127,7 @@ Computer simulation has been recognised and increasingly used by geographers as 
 
 \subsection{Definition of the problem}
 
-Geographical systems can be crudely described as social agents interacting with one another, within a limited portion of space. Social agents thus constitute the microscopic level of the system, and they are framed by a system-time that evolves irreversibly, creating temporal and cumulative effects, also known as path-dependent \citep{arthur1994increasing}. Therefore, observing a system at different points in time does not equate to observing \added{a} different system at a single point in time. This general property of ergodicity applies to geographical elements such as road networks or built-up areas \citep{pumain2003approche}. Similarly to what \citet{gell1995quark} calls \emph{frozen accidents} in complex system generally, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. Therefore, strong spatio-temporal path-dependencies in the trajectory of individual cities and changing social environments over time prohibits the use of ergodic models... which are the main models to be found in geosimulation.
+Geographical systems can be crudely described as social agents interacting with one another, within a limited portion of space. Social agents thus constitute the microscopic level of the system, and they are framed by a system-time that evolves irreversibly, creating temporal and cumulative effects, also known as path-dependent \citep{arthur1994increasing}. Therefore, observing a system at different points in time does not equate to observing \added{a} different systems at a single point in time. This general property of ergodicity applies to geographical elements such as road networks or built-up areas \citep{pumain2003approche}. Similarly to what \citet{gell1995quark} calls \emph{frozen accidents} in complex system generally, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. Therefore, strong spatio-temporal path-dependencies in the trajectory of individual cities and changing social environments over time prohibits the use of ergodic models... which are the main models to be found in geosimulation.
 
 
 Self-organization has been shown to be a central feature of geographical systems in general and cities in particular ~\citep{AllenSanglier1981,saint1989villes, Portugali2000}. In the vocabulary of complex systems, cities also exhibit emergent properties at macroscopic scales~\citep{pumain2006hierarchy, AzizAlaouiBertelle2009}, which can be simulated through microscopic interactions between agents~\citep{Wu2002, Batty2007}. Complexity is partially due to bifurcations, which are determinant in spatial systems~\citep{Wilson1981, Wilson2002}. Indeed, in spatially explicit simulation models, the non-linearity of local interactions is very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interpret the resulting global structures. In that sense, the impact of initial \emph{spatial} settings on final outcomes is assumed to be significant just as other initial conditions, but of more interest to the geographer. \\
@@ -171,7 +171,7 @@ In this paper, we build on these contributions and go further by systematically 
 \section{Methods}
 %%%%%%%%%%%%%%%%%%%%%%
 
-The general method workflow of our method is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends own meta-parameters and feeds the model $\mu$ at initialisation (lower branch). The resulting configurations \emph{can be} clustered into qualitative types of spatial patterns. The sensitivity analysis relates to the model's parameters to how the density spatial distribution was generated and the pattern of density generated in order to produce qualitative knowledge from the model and its behaviour. In particular, we want to emphasize that spatial effects derive not only from grid size or shape effects, but also from the heterogeneity of the distribution of geographical entities (people, housing, networks, etc.) in space. In the models we used as examples, the initial spatial configurations  can be either flat or heterogeneous, monocentric or polycentric, based on external databases and on internal modelling (generation of synthetic population for instance \citep{bhat1999activity}).
+The general method workflow of our method is illustrated in Figure \ref{fig:method}. In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on \replaced{meta-parameters and feeds the model $\mu$ at initialisation (lower branch)}{its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters meta-parameters to distinguish from the standard parameters of the models and highlight their higher position in the simulation process}. The resulting configurations \emph{can be} clustered into qualitative types of spatial patterns. The sensitivity analysis relates to the model's parameters to how the density spatial distribution was generated and the pattern of density generated in order to produce qualitative knowledge from the model and its behaviour. In particular, we want to emphasize that spatial effects derive not only from grid size or shape effects, but also from the heterogeneity of the distribution of geographical entities (people, housing, networks, etc.) in space. In the models we used as examples, the initial spatial configurations can be either flat or heterogeneous, monocentric or polycentric, based on external databases and on internal modelling (generation of synthetic population for instance \citep{bhat1999activity}).
 %%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[htbp] 
 \begin{center} 
@@ -233,11 +233,9 @@ In the following section, we briefly recall the main components of the two ``cla
 
 \subsection{Case study models}
 
-
 Schelling's model consists in an abstract urban housing market where agents of different attributes (for example: red or green) sense their environment, evaluate their satisfaction in terms of neighbourhood composition (how many reds and greens?), and relocate if unsatisfied. It has been shown by \cite{Schelling1969} that even tolerant agents tend to produce segregated patterns because of the complexity of their local interactions and the snowball effect of individual moves on the global distribution of agents in the city. The main parameters of this model are the tolerance level (maximum \% of agents different to {\it ego} accepted in the neighbourhood), the scope of sensing, the minority split and the percentage of vacant spaces in the housing market. In addition, we are interested in testing the impact of the initial spatial distribution of housing capacity in this project, using the generated grids. The outcome of the model is measured by a combination of three segregation indices: Dissimilarity, Moran's Index, Entropy~\citep{brown2006spatial}. We translated the Netlogo implementation of Schelling into Scala for this project.
 
-Sugarscape is a model of resource extraction which simulates the unequal distribution of wealth within a heterogenous population \citep{EpsteinAxtell1996}. Although it {\it "is designed to study the interaction of many plausible social mechanisms"} \citep[p.125]{Axtelletal1996}, we refer in this paper to the first (and simplest) version of the model, where {\it "processes allow its agents to look for, move to, and eat a resource ("sugar") which grows on its [...] array of cells"}. Agents of different vision scopes and different metabolisms harvest a self-regenerating resource available heterogeneously in the initial landscape, they settle and collect this resource, which leads some of them to survive and others to perish. The main parameters of this model are the number of agents, their minimal and maximal resource levels. In addition, we are interested in testing the impact of the spatial distribution of the resource, using the generated grids. We extend the implementation with agents wealth distribution of~\citet{li2009netlogo}. The outcome of the model is measured by a Gini index of inequality for resource distribution. 
-
+Sugarscape is a model of resource extraction which simulates the unequal distribution of wealth within a heterogenous population \cite{EpsteinAxtell1996}. Although it "is designed to study the interaction of many plausible social mechanisms" \cite[p.125]{Axtelletal1996}, we refer in this paper to the first (and simplest) version of the model, where "processes allow its agents to look for, move to, and eat a resource ("sugar") which grows on its $[...]$ array of cells". Agents of different vision scopes and different metabolisms harvest a self-regenerating resource available heterogeneously in the initial landscape, they settle and collect this resource, which leads some of them to survive and others to perish. The main parameters of this model are the number of agents, their minimal and maximal resource levels. \added{In an urban environment, Sugarscape can be used to model how the spatial distribution of any type of goods or services can influence the spread of wealth among inhabitants.} We extend the implementation with agents wealth distribution of \cite{li2009netlogo}. The outcome of the model is measured by a Gini index of inequality for resource distribution. \replaced{We are interested in testing the impact of the spatial distribution of the resource, using the generated grids.}
 
 \subsection{Experiment design}
 For Sugarscape, we explore three dimensions of the parameter space: the total population of agents $P\in \left[10;510\right]$, the minimal initial agent resource $s_{-}\in \left[10;100\right]$ and the maximal initial agent resource $s_{+}\in \left[110;200\right]$. Each parameter is binned into 10 values, giving 1000 parameter points. We run 50 repetitions for each configuration, which yields reasonable convergence properties. The initial spatial configuration varies across 50 different grids, generated by sampling meta-parameters for the generator in a LHS. We did not use the clustered grids to test the flexibility of our framework, which is demonstrated in this case by a direct sequential coupling of the generator and the model. Indeed, because the density distribution refers to the distribution of resource rather than to the representation of a city structure, we do not need the typology of urban density in this experiment. The full experiment thus equates to 2,500,000 simulations (1000 parameter combinations x 50 density grids x 50 replications). 
